fix slideshow images not showing up; fixed paragraph styling

--- a/css/base/_reset.scss
+++ b/css/base/_reset.scss
@@ -3,11 +3,11 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe, p, blockquote, pre,
+html, body, div, span, applet, object, iframe, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var, center,
-dl, dt, dd, ol, ul, li,
+dl, dt, dd, ol,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
