--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -51,7 +51,8 @@ header {
     }
     ul.navbar-links {
       overflow: hidden;
-      // padding: 0;
+      padding: 0;
+      margin: 0;
       // margin-bottom: 0;
       //  margin-top: 20px;
       li {
